--- a/components/index.html
+++ b/components/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Components | Bigfoot Music Management</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
-<body>
-  
-</body>
-</html>
+  <body>
+    <h1>Web Components</h1>
+    <h2>Typography Defaults</h2>
+    <section class="component">
+      <h3 class="component__name">Headings</h3>
+      <div class="component__img">
+        <img srcset="images/header__title-wordmark.png 2x" src="images/header__title-wordmark.png" alt="header title">
+      </div>
+      <div class="component__code">
+        <h1>Bigfoot</h1>
+      </div>
+    </section>
+
+  </body>
+</html> 
