--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,9 @@ body {
   font-family: var(--font-sans-serif);
   color: var(--color-black);
 }
+h1, h2, h3, h4, h5 {
+  font-size: 1.125em;
+}
 img {
   display: block;
 }
