--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ html {
 body {
   font-family: var(--font-sans-serif);
   color: var(--color-black);
+  background-color: var(--color-gray-light);
 }
 h1, h2, h3, h4, h5 {
   font-size: 1.125em;
