--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-  --font-sans-serif: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  --font-sans-serif: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
   --color-yellow: #ffb800;
   --color-black: #050505;
   --color-gray-light: #f5f5f5;
@@ -13,10 +13,17 @@ html {
 body {
   font-family: var(--font-sans-serif);
   color: var(--color-black);
-  background-color: var(--color-gray-light);
+  font-weight: 400;
+  background-color: var(--color-gray-light );
 }
 h1, h2, h3, h4, h5 {
   font-size: 1.125em;
+}
+h1, h3 {
+  font-weight: 900;
+}
+h3 {
+  writing-mode: vertical-rl;
 }
 img {
   display: block;
