--- a/components/index.html
+++ b/components/index.html
@@ -7,25 +7,29 @@
   </head>
   <body>
     <h1>Web Components</h1>
+    
     <h2>Typography Defaults</h2>
+    
     <section class="component">
       <h3 class="component__name">h1, h3</h3>
       <div class="component__img">
         <img srcset="images/header__title-wordmark.png 2x" src="images/header__title-wordmark.png" alt="header title">
       </div>
       <div class="component__code">
-        <h1>Bigfoot</h1>
+        <h1 class="rotate">Bigfoot</h1>
       </div>
     </section>
+    
     <section class="component">
       <h3 class="component__name">h2</h3>
       <div class="component__img">
-        <img srcset="images/header__title-wordmark.png 2x" src="images/header__title-wordmark.png" alt="header title">
+        <img srcset="images/header__title-subtitle.png 2x" src="images/header__title-wordmark.png" alt="header title">
       </div>
       <div class="component__code">
-        <h2>Artist & Music Management</h2>
+        <h2 class="rotate">Artist & Music Management</h2>
       </div>
     </section>  
+    
     <h2>Atoms</h2>
     <h2>Header</h2>
     <h2>Artist Section</h2>
