--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,15 @@ h1, h2, h3, h4, h5 {
 h1, h3 {
   font-weight: 900;
 }
-h3 {
-  writing-mode: vertical-rl;
+h2 {
+  font-weight: 400;
 }
+/* h3 {
+  writing-mode: vertical-rl;
+} */
 img {
   display: block;
+}
+.rotate {
+  writing-mode: vertical-rl;
 }
