--- a/components/index.html
+++ b/components/index.html
@@ -23,7 +23,7 @@
     <section class="component">
       <h3 class="component__name">h2</h3>
       <div class="component__img">
-        <img srcset="images/header__title-subtitle.png 2x" src="images/header__title-wordmark.png" alt="header title">
+        <img srcset="images/header__title-subtitle.png 2x" src="images/header__title-wordmark.png" alt="header subtitle">
       </div>
       <div class="component__code">
         <h2 class="rotate">Artist & Music Management</h2>
@@ -31,6 +31,17 @@
     </section>  
     
     <h2>Atoms</h2>
+    
+    <section class="component">
+      <h3 class="component__name">.header__logo</h3>
+      <div class="component__img">
+        <img srcset="images/header__title-subtitle.png 2x" src="images/header__title-wordmark.png" alt="header title">
+      </div>
+      <div class="component__code">
+        <h2 class="rotate">Artist & Music Management</h2>
+      </div>
+    </section> 
+
     <h2>Header</h2>
     <h2>Artist Section</h2>
     <h2>Footer</h2>
