--- a/components/index.html
+++ b/components/index.html
@@ -35,10 +35,10 @@
     <section class="component">
       <h3 class="component__name">.header__logo</h3>
       <div class="component__img">
-        <img srcset="images/header__title-subtitle.png 2x" src="images/header__title-wordmark.png" alt="header title">
+        <img srcset="images/header__logo.png 2x" src="images/header__title-wordmark.png" alt="header logo">
       </div>
-      <div class="component__code">
-        <h2 class="rotate">Artist & Music Management</h2>
+      <div class="component__code logo">
+        <img src="https://wearebigfoot.com/src/gfx/mark.svg" alt="logo">
       </div>
     </section> 
 
