--- a/components/index.html
+++ b/components/index.html
@@ -16,17 +16,17 @@
         <img srcset="images/header__title-wordmark.png 2x" src="images/header__title-wordmark.png" alt="header title">
       </div>
       <div class="component__code">
-        <h1 class="rotate">Bigfoot</h1>
+        <h1 class="header__title-wordmark rotate">Bigfoot</h1>
       </div>
     </section>
     
     <section class="component">
       <h3 class="component__name">h2</h3>
       <div class="component__img">
-        <img srcset="images/header__title-subtitle.png 2x" src="images/header__title-wordmark.png" alt="header subtitle">
+        <img srcset="images/header__title-subtitle.png 2x" src="images/header__title-subtitle.png" alt="header subtitle">
       </div>
       <div class="component__code">
-        <h2 class="rotate">Artist & Music Management</h2>
+        <h2 class="header__title-subtitle rotate">Artist & Music Management</h2>
       </div>
     </section>  
     
@@ -35,14 +35,35 @@
     <section class="component">
       <h3 class="component__name">.header__logo</h3>
       <div class="component__img">
-        <img srcset="images/header__logo.png 2x" src="images/header__title-wordmark.png" alt="header logo">
+        <img srcset="images/header__logo.png 2x" src="images/header__logo.png" alt="header logo">
       </div>
-      <div class="component__code logo">
+      <div class="component__code header__logo">
         <img src="https://wearebigfoot.com/src/gfx/mark.svg" alt="logo">
       </div>
-    </section> 
+    </section>
+
+    <section class="component">
+      <h3 class="component__name">.artist-section__title-dot</h3>
+      <div class="component__img">
+        <img srcset="images/artist-section__title-dot.png 2x" src="images/artist-section__title-dot.png" alt="dot">
+      </div>
+      <div class="component__code">
+        <div class="artist-section__title-dot"></div>
+      </div>
+    </section>
 
     <h2>Header</h2>
+    
+    <section class="component">
+      <h3 class="component__name">.artist-section__title-dot</h3>
+      <div class="component__img">
+        <img srcset="images/header.png 2x" src="images/header.png" alt="header">
+      </div>
+      <div class="component__code logo">
+        <div class="artist-section__title-dot"></div>
+      </div>
+    </section>
+
     <h2>Artist Section</h2>
     <h2>Footer</h2>
 
