--- a/components/index.html
+++ b/components/index.html
@@ -55,12 +55,20 @@
     <h2>Header</h2>
     
     <section class="component">
-      <h3 class="component__name">.artist-section__title-dot</h3>
+      <h3 class="component__name">.header</h3>
       <div class="component__img">
         <img srcset="images/header.png 2x" src="images/header.png" alt="header">
       </div>
-      <div class="component__code logo">
-        <div class="artist-section__title-dot"></div>
+      <div class="component__code">
+        <div class="header">
+          <div class="header__logo">
+            <img src="https://wearebigfoot.com/src/gfx/mark.svg" alt="logo">
+          </div>
+          <div>
+            <h1>Bigfoot</h1>
+            <h2>Artist & Music Management</h2>
+          </div>
+        </div>
       </div>
     </section>
 
