--- a/components/index.html
+++ b/components/index.html
@@ -60,15 +60,19 @@
         <img srcset="images/header.png 2x" src="images/header.png" alt="header">
       </div>
       <div class="component__code">
-        <div class="header">
-          <div class="header__logo">
-            <img src="https://wearebigfoot.com/src/gfx/mark.svg" alt="logo">
-          </div>
-          <div>
-            <h1>Bigfoot</h1>
-            <h2>Artist & Music Management</h2>
-          </div>
-        </div>
+        <header class="header">
+          <a href="https://wearebigfoot.com">
+            <div class="header__logo">
+              <img src="https://wearebigfoot.com/src/gfx/mark.svg" alt="logo">
+            </div>
+            <div class="header__title-container">
+              <div class="header__title">
+                <h1>Bigfoot</h1>
+                <h2>Artist & Music Management</h2>
+              </div>
+            </div>
+          </a>
+        </header>
       </div>
     </section>
 
