--- a/components/index.html
+++ b/components/index.html
@@ -78,6 +78,17 @@
     </section>
 
     <h2>Artist Section</h2>
+
+    <section class="component">
+      <h3 class="component__name">.artist-section</h3>
+      <div class="component__img">
+        <img srcset="images/artist-section.png 2x" src="images/artist-section.png" alt="artist section">
+      </div>
+      <div class="component__code">
+        
+      </div>
+    </section>
+
     <h2>Footer</h2>
 
   </body>
