--- a/components/index.html
+++ b/components/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
+    <header class="page-nav">
+      <div class="page-nav__container">
+        <h1>Bigfoot Music Management</h1>
+      </div>
+    </header>
+    <main>
     <h1>Web Components</h1>
     
     <h2>Typography Defaults</h2>
@@ -90,6 +96,6 @@
     </section>
 
     <h2>Footer</h2>
-
+    </main>
   </body>
 </html> 
