--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,12 @@ a {
 img {
   display: block;
 }
+.page-nav {
+  position: fixed;
+  overflow: auto;
+  height: 100%;
+  width: 300px;
+}
 .rotate {
   writing-mode: vertical-rl;
 }
