--- a/components/index.html
+++ b/components/index.html
@@ -10,9 +10,39 @@
     <header class="page-nav">
       <div class="page-nav__container">
         <h1>Bigfoot Music Management</h1>
+        <nav>
+          <section>
+            <h2><a>Typography</a></h2>
+            <ul>
+              <li><a>h1, h3</a></li>
+              <li><a>h2</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2><a>Atoms</a></h2>
+            <ul>
+              <li><a>.header__logo</a></li>
+              <li><a>.artist-section__title-dot</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2><a>Header</a></h2>
+            <ul>
+              <li><a>.header</a></li>
+              <li><a>.artist-section__title-dot</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2><a>Artist Section</a></h2>
+            <ul>
+              <li><a>.header</a></li>
+              <li><a>.artist-section</a></li>
+            </ul>
+          </section>
+        </nav>
       </div>
     </header>
-    <main>
+    <main class="main">
     <h1>Web Components</h1>
     
     <h2>Typography Defaults</h2>
