--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,9 @@ body {
   font-family: var(--font-sans-serif);
   color: var(--color-black);
   font-weight: 400;
-  background-color: var(--color-gray-light );
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  grid-template-areas: "nav main";
 }
 h1, h2, h3, h4, h5 {
   font-size: 1.125em;
@@ -38,10 +40,19 @@ img {
   display: block;
 }
 .page-nav {
-  position: fixed;
-  overflow: auto;
-  height: 100%;
-  width: 300px;
+  grid-area: nav;
+  overflow: scroll;
+  background-color: var(--color-gray-light );
+}
+.page-nav__container {
+  padding: 30px;
+}
+.main {
+ padding: 30px;
+ overflow-y: auto;
+ grid-area: main;
+ width: 300px;
+ height: 100%;
 }
 .rotate {
   writing-mode: vertical-rl;
