--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ a {
 }
 img {
   display: block;
+  max-width: 100%;
 }
 .page-nav {
   grid-area: nav;
@@ -51,8 +52,6 @@ img {
  padding: 30px;
  overflow-y: auto;
  grid-area: main;
- width: 300px;
- height: 100%;
 }
 .rotate {
   writing-mode: vertical-rl;
