--- a/components/index.html
+++ b/components/index.html
@@ -121,7 +121,13 @@
         <img srcset="images/artist-section.png 2x" src="images/artist-section.png" alt="artist section">
       </div>
       <div class="component__code">
-        
+        <div class="artist-section">
+          <a href="#!">
+            <h3>Adam Beyer</h3>
+            <img srcset="images/artist-section.png 2x" src="images/artist-section.png" alt="artist section">
+            <img srcset="images/artist-section.png 2x" src="images/artist-section.png" alt="artist section">
+          </a>
+        </div>
       </div>
     </section>
 
