--- a/components/index.html
+++ b/components/index.html
@@ -124,8 +124,8 @@
         <div class="artist-section">
           <a href="#!">
             <h3>Adam Beyer</h3>
-            <img srcset="images/artist-section.png 2x" src="images/artist-section.png" alt="artist section">
-            <img srcset="images/artist-section.png 2x" src="images/artist-section.png" alt="artist section">
+            <img srcset="images/artist-section__img-lg.png 2x" src="images/artist-section__img-lg.png" alt="artist section img lg">
+            <img srcset="images/artist-section__img-sm.png 2x" src="images/artist-section__img-sm.png" alt="artist section img sm">
           </a>
         </div>
       </div>
