--- a/components/index.html
+++ b/components/index.html
@@ -123,7 +123,10 @@
       <div class="component__code">
         <div class="artist-section">
           <a href="#!">
-            <h3>Adam Beyer</h3>
+            <div class="artist-section__title">
+              <div class="artist-section__title-dot"></div>
+              <h3 class="artist-section__title-name">Adam Beyer</h3>
+            </div> 
             <img srcset="images/artist-section__img-lg.png 2x" src="images/artist-section__img-lg.png" alt="artist section img lg">
             <img srcset="images/artist-section__img-sm.png 2x" src="images/artist-section__img-sm.png" alt="artist section img sm">
           </a>
