--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,15 @@ img {
 .header__logo {
   width: 96px;
 }
+.artist-section__title {
+  display: flex;
+  flex-direction: row;
+  writing-mode: vertical-rl;
+  vertical-align: baseline;
+}
+.artist-section__title-name {
+  
+}
 .artist-section__title-dot {
   width: 12px;
   height: 12px;
@@ -100,5 +109,4 @@ img {
 }
 .artist-section {
   display: grid;
-  grid-template-areas: ;
 }
