--- a/components/index.html
+++ b/components/index.html
@@ -121,14 +121,14 @@
         <img srcset="images/artist-section.png 2x" src="images/artist-section.png" alt="artist section">
       </div>
       <div class="component__code">
-        <div class="artist-section">
+        <div class="artist-section artist-section-1">
           <a href="#!">
             <div class="artist-section__title">
               <div class="artist-section__title-dot"></div>
               <h3 class="artist-section__title-name">Adam Beyer</h3>
             </div> 
-            <img srcset="images/artist-section__img-lg.png 2x" src="images/artist-section__img-lg.png" alt="artist section img lg">
-            <img srcset="images/artist-section__img-sm.png 2x" src="images/artist-section__img-sm.png" alt="artist section img sm">
+            <img class="artist-section__img-lg" srcset="images/artist-section__img-lg.png 2x" src="images/artist-section__img-lg.png" alt="artist section img lg">
+            <img class="artist-section__img-sm" srcset="images/artist-section__img-sm.png 2x" src="images/artist-section__img-sm.png" alt="artist section img sm">
           </a>
         </div>
       </div>
