--- a/components/index.html
+++ b/components/index.html
@@ -127,7 +127,7 @@
               <div class="artist-section__title-dot"></div>
               <h3 class="artist-section__title-name">Adam Beyer</h3>
             </div> 
-            <img class="artist-section__img-lg" srcset="images/artist-section__img-lg.png 2x" src="images/artist-section__img-lg.png" alt="artist section img lg">
+            <div class="artist-section__img-lg"></div>
             <img class="artist-section__img-sm" srcset="images/artist-section__img-sm.png 2x" src="images/artist-section__img-sm.png" alt="artist section img sm">
           </a>
         </div>
