--- a/components/index.html
+++ b/components/index.html
@@ -135,6 +135,23 @@
     </section>
 
     <h2>Footer</h2>
+
+    <section class="component">
+      <h3 class="component__name">.footer</h3>
+      <div class="component__img">
+        <img srcset="images/footer.png 2x" src="images/footer.png" alt="artist section">
+      </div>
+      <div class="component__code">
+        <footer class="footer">
+          <nav>
+            <a href="#!">
+              <p class="footer__contact">Contact Us</p>
+              <p class="footer__contact-email">hello@wearebigfoot.com</p>
+            </a>
+          </nav>
+        </footer>
+      </div>
+    </section>
     </main>
   </body>
 </html> 
