--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ body {
   display: grid;
   grid-template-columns: 300px 1fr;
   grid-template-areas: "nav main";
+  font-size: 1.125rem;
 }
 h1, h2, h3, h4, h5 {
   font-size: 1.125em;
@@ -137,4 +138,16 @@ img {
 }
 .artist-section-1 {
   grid-template-areas: ". title img-lg img-lg" ". img-sm img-lg img-lg";
+}
+
+/*--Footer--*/
+.footer {
+  border-top: 1px solid var(--color-black);
+}
+.footer__contact {
+  font-weight: 900;
+  margin-bottom: 0;
+}
+.footer__contact-email {
+  margin-top: 5px;
 }
