--- a/components/index.html
+++ b/components/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-nav">
       <div class="page-nav__container">
-        <h1>Bigfoot Music Management</h1>
+        <h1 class=".page-nav__title">Bigfoot Music Management</h1>
         <nav>
           <section>
             <h2><a>Typography</a></h2>
@@ -139,7 +139,7 @@
     <section class="component">
       <h3 class="component__name">.footer</h3>
       <div class="component__img">
-        <img srcset="images/footer.png 2x" src="images/footer.png" alt="artist section">
+        <img srcset="images/footer.png 2x" src="images/footer.png" alt="footer">
       </div>
       <div class="component__code">
         <footer class="footer">
