--- a/components/index.html
+++ b/components/index.html
@@ -18,8 +18,8 @@
           <section class="page-nav__section">
             <h2><a href="#typography">Typography</a></h2>
             <ul>
-              <li><a href="h1">h1, h3</a></li>
-              <li><a href="h2">h2</a></li>
+              <li><a href="#h1">h1, h3</a></li>
+              <li><a href="#h2">h2</a></li>
             </ul>
           </section>
           <section class="page-nav__section">
@@ -53,7 +53,7 @@
     <main class="main">
     <h1>Web Components</h1>
     
-    <h2 id="typography">Typography Defaults</h2>
+    <h2 id="typography">Typography</h2>
     
     <section class="component">
       <h3 id="h1" class="component__name">h1, h3</h3>
@@ -78,7 +78,7 @@
     <h2 id="atoms">Atoms</h2>
     
     <section class="component">
-      <h3 id="#header__logo" class="component__name">.header__logo</h3>
+      <h3 id="header__logo" class="component__name">.header__logo</h3>
       <div class="component__img">
         <img srcset="images/header__logo.png 2x" src="images/header__logo.png" alt="header logo">
       </div>
@@ -88,7 +88,7 @@
     </section>
 
     <section class="component">
-      <h3 id=".artist-section__title-dot" class="component__name">.artist-section__title-dot</h3>
+      <h3 id="artist-section__title-dot" class="component__name">.artist-section__title-dot</h3>
       <div class="component__img">
         <img srcset="images/artist-section__title-dot.png 2x" src="images/artist-section__title-dot.png" alt="dot">
       </div>
