--- a/components/index.html
+++ b/components/index.html
@@ -135,8 +135,8 @@
               <div class="artist-section__title-dot"></div>
               <h3 class="artist-section__title-name">Adam Beyer</h3>
             </div> 
-            <div class="aritist-section__img artist-section__img-lg-adam-beyer artist-section__img-lg"></div>
-            <div class="aritist-section__img artist-section__img-sm-adam-beyer artist-section__img-sm"></div>
+            <div class="artist-section__img artist-section__img-lg img-lg-adam-beyer"></div>
+            <div class="artist-section__img artist-section__img-sm img-sm-adam-beyer img-sm"></div>
           </a>
         </div>
       </div>
