Added footer and artist sections

--- a/components/index.html
+++ b/components/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body>
+  <body class="content-page__body">
     <header class="page-nav">
       <div class="page-nav__container">
         <div class="component__code header__logo">
