--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,13 @@ img {
   max-width: 100%;
 }
 
+.home-page__main {
+  display: flex;
+  flex-direction: column;
+  padding: 120px 144px 96px 144px;
+  gap: 24px;
+}
+
 
 /*--Header--*/
 .header {
@@ -94,6 +101,11 @@ img {
 .header__title h2  {
   margin-top: 0.5rem;
 }
+.home-page__header {
+  position: fixed;
+  top: 0;
+  padding: 24px;
+}
 
 /*--Artist Section--*/
 .artist-section {
@@ -104,6 +116,19 @@ img {
 }
 .artist-section-1 {
   grid-template-areas: ". title img-lg img-lg" ". img-sm img-lg img-lg";
+}
+.artist-section-2 {
+  grid-template-areas: "img-lg img-lg img-sm ." "img-lg img-lg title .";
+}
+.artist-section-3 {
+  grid-template-areas: ". . img-lg img-lg" "img-sm title img-lg img-lg";
+}
+.artist-section-4 {
+  grid-template-areas: "img-lg img-lg . img-sm" "img-lg img-lg title .";
+}
+.artist-section.artist-section-4 .artist-section__title {
+  margin-top: auto;
+  margin-right: 100px;
 }
 .artist-section:hover h3 {
   color: var(--color-yellow);
@@ -157,6 +182,42 @@ img {
 .img-sm-adam-beyer {
   background-image: url("https://wearebigfoot.com/lib/artist/1_secondary_large.jpg");
 }
+.img-lg-dense-pika {
+  background-image: url("https://wearebigfoot.com/lib/artist/6_primary_large.jpg");
+}
+.img-sm-dense-pika {
+  background-image: url("https://wearebigfoot.com/lib/artist/6_secondary_large.jpg");
+}
+.img-lg-joris-voom {
+  background-image: url("https://wearebigfoot.com/lib/artist/7_primary_large.jpg");
+}
+.img-sm-joris-voom {
+  background-image: url("https://wearebigfoot.com/lib/artist/7_secondary_large.jpg");
+}
+.img-lg-layton-giordani {
+  background-image: url("https://wearebigfoot.com/lib/artist/8_primary_large.jpg");
+}
+.img-sm-layton-giordani {
+  background-image: url("https://wearebigfoot.com/lib/artist/8_secondary_large.jpg");
+}
+.img-lg-luciid {
+  background-image: url("https://wearebigfoot.com/lib/artist/11_primary_large.jpg");
+}
+.img-sm-luciid {
+  background-image: url("https://wearebigfoot.com/lib/artist/11_secondary_large.jpg");
+}
+.img-lg-luigi-madonna {
+  background-image: url("https://wearebigfoot.com/lib/artist/9_primary_large.jpg");
+}
+.img-sm-luigi-madonna {
+  background-image: url("https://wearebigfoot.com/lib/artist/9_secondary_large.jpg");
+}
+.img-lg-will-atkinson {
+  background-image: url("https://wearebigfoot.com/lib/artist/10_primary_large.jpg");
+}
+.img-sm-will-atkinson {
+  background-image: url("https://wearebigfoot.com/lib/artist/10_secondary_large.jpg");
+}
 
 /*--Footer--*/
 .footer {
@@ -164,14 +225,18 @@ img {
 }
 .footer__contact {
   font-weight: 900;
-  margin-bottom: 0;
+  margin: 0;
 }
 .footer__contact-email {
   margin-top: 5px;
+  margin-bottom: 0;
+}
+.home-page__footer {
+  padding: 24px;
 }
 
-/*--Content page specific--*/
-body {
+/*--Component page specific--*/
+.content-page__body {
   display: grid;
   grid-template-columns: 300px 1fr;
   grid-template-areas: "nav main";
