--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,7 @@ img {
   display: contents;
   align-self: flex-end;
 }
+/*--Artist Section title--*/
 .artist-section__title-name {
   display: flex;
   flex-direction: row;
@@ -217,6 +218,7 @@ img {
     margin: 0 8px 0 0;
   }
 }
+/*--Artist Section images--*/
 .artist-section__img {
   padding-top: 100%;
   background-size: cover;
